--- a/content/post/2020-04-15-scraping-failed-tabulizer-pdfs-with-aws-textract.Rmd
+++ b/content/post/2020-04-15-scraping-failed-tabulizer-pdfs-with-aws-textract.Rmd
@@ -170,6 +170,12 @@ JobId
 
 ```
 
+```{r 'wait-time', message=FALSE, warning=FALSE, include=FALSE}
+# Wait for Textract to finish processing
+Sys.sleep(120)
+```
+
+
 
 # Recalling the Blocks from Textract
 
