--- a/content/post/2020-04-14-evaluating-mass-muni-cafr-tabulizer-results-part-3.Rmd
+++ b/content/post/2020-04-14-evaluating-mass-muni-cafr-tabulizer-results-part-3.Rmd
@@ -100,4 +100,4 @@ DT::datatable(mass_compare[muni %in% bad_elements,
 
 # Conclusion
 
-The combination of pdftools and Tabula gave encouraging results, and we are confident that further fine tuning could further reduce the error rate. We also have some ideas about which tables fail most often, so the risk of an unexpected mismatch might be mitigated by manual intervention or getting a back up from Textract in these cases. In the next post, we use the AWS Textract SDK to use their machine learning based solution to see how their solution does.
+The combination of pdftools and Tabula gave encouraging results, and we are confident that further fine tuning could further reduce the error rate. We also have some ideas about which tables fail most often, so the risk of an unexpected mismatch might be mitigated by manual intervention or getting a back up from Textract in these cases. In the next post [Scraping Failed Tabulizer PDFs with AWS Textract - Part 4](https://redwallanalytics.com/2020/04/14/scraping-failed-tabulizer-pdfs-with-aws-textract-part-4/), we use the AWS paws SDK to save an aggregated PDF in S3 and use their machine-learning based Textract solution to extract the tables to see how their solution does for the difficult cases.
