--- a/content/post/2020-03-31-parsing-mass-municipal-pdf-cafrs-with-tabulizer-pdftools-and-aws-textract-part-1.Rmd
+++ b/content/post/2020-03-31-parsing-mass-municipal-pdf-cafrs-with-tabulizer-pdftools-and-aws-textract-part-1.Rmd
@@ -28,13 +28,13 @@ library(DT)
 
 Redwall Analytics had the pleasure of collaborating with Marc Joffe, of Reason Foundation, in its October 2018 post [Replicating Yankee Institute Risk Score Over 15 Years](https://redwallanalytics.com/2019/10/12/replicating-yankee-institute-risk-score-over-15-years/) for 150 Connecticut towns. This involved taking a well organized public dataset from the State's website, and analyzing and building an application to view the risk score over time in R. When Marc called to ask if we could report on our blog site about similar analysis for 150 Massachusetts towns, as in Connecticut's [Warning Signs](https://yankeeinstitute.org/wp-content/uploads/2018/08/Warning-Signs-min-1.pdf), we jumped at the idea. Naturally, Redwall wanted to replicate the analysis over a longer time period, but this turned out to be more challenging in Massachusetts. 
 
-As Redwall discussed in [A Walk Though of Accessing Financial Statements with XBRL in R - Part 1](https://redwallanalytics.com/2020/02/18/a-walk-though-of-accessing-financial-statements-with-xbrl-in-r-part-1/), the SEC has required registered companies to report in XBRL since 2008. Unfortunately, this is not the case so for the tens of thousands of municipal borrowers around the US. Connecticut is one of approximately 20 states with municipal monitoring, so it systematically gathers key financial statement data each year in open public databases. Unfortunately, Massachusetts does not have formal municipal monitoring and does not make similar databases available. 
+As Redwall discussed in [A Walk Though of Accessing Financial Statements with XBRL in R - Part 1](https://redwallanalytics.com/2020/02/18/a-walk-though-of-accessing-financial-statements-with-xbrl-in-r-part-1/), the SEC has required registered companies to report in XBRL since 2008. Unfortunately, this is not the case for the tens of thousands of municipal borrowers around the US. Connecticut is one of approximately 20 states with municipal monitoring, so the Office of Policy and Management systematically gathers key financial statement data each year in open public databases. Unfortunately, Massachusetts does not have formal municipal monitoring and does not make similar databases available. 
 
 While Massachusetts does maintain the slick-looking [Municipal Trends Dashboard](https://www.mass.gov/service-details/municipal-finance-trend-dashboard), with some key information going back in some cases 20 years, it doesn't offer the opportunity to download the complete data, and for some reason, excludes a lot of key elements. For example, it includes "Unassigned General Fund Balance", but not "Assigned General Fund Balance", so it is impossible to know the complete picture of the Fund Balance of a municipality. There are similar difficulties finding the Unrestricted Net Position, which is essential to the Yankee Institute's analysis. In Connecticut, we have felt a little left behind by Massachusetts' successful biotech and high-technology industries, and resulting booming real estate markets, so it was a surprise to see how far ahead we are in this regard.
 
 # Project Outlines
 
-As we worked to replicate Marc's analysis, the outlines of an interesting project, which might be helpful to others needing to extract data from PDFs, became apparent. Redwall will gather some of the information from the Municipal Trends Dashboard, but then try to extract the missing elements from PDFs containing the cities’ audited financial statements (known as CAFRs), using OCR tools available in R. For the purposes of this exercise, his spreadsheets can represents a kind of "labelled data" for comparison purposes with that of the extracted PDFs.
+As we worked to replicate Marc's analysis, the outlines of an interesting project, which might be helpful to others needing to extract data from PDFs, became apparent. Redwall will gather some of the information from the Municipal Trends Dashboard, but then try to extract the missing elements from PDFs containing the cities’ audited financial statements (known as CAFRs), using OCR tools available in R. We will then attempt to use the commercial AWS Textract service for the remaining tough cases using the R paws library. For the purposes of this exercise, Marc's spreadsheets will represents a kind of "labelled data" for comparison purposes with fields from the extracted PDFs.
 
 The relevant 150 PDFs for 2018 were downloaded from a library maintained by the [Center for Municipal Finance](http://www.municipalfinance.org), and Redwall set out on heavy-duty PDF parsing to be described in multiple upcoming posts. In this post, we will show the data required in Table \@ref(fig:mass-inputs) and results in Table \@ref(fig:risk-score-summary) of Marc's analysis, and explore which data fields will be needed to automate the process. (Please note: the data and methodology shown below are Marc's, displayed here for information purposes. Redwall Analytics does not vouch for the accuracy of the data or methodology, nor make any investment recommendations based on it.)
 
@@ -59,8 +59,10 @@ names(reason)[c(1:16, 40:106)]
 
 Part 1 - Parsing Mass Municipal PDF CAFRs with Tabulizer, pdftools and AWS Textract
 Part 2 - [Tabulizer and pdftools Together as Super-powers](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/)
-Part 3 - Evaluating Mass Muni CAFR Tabulizer Results - Part 3
-Part 4 - Scraping Failed Tabulizer PDFs with AWS Textract (Under Construction)
+Part 3 - [Evaluating Mass Muni CAFR Tabulizer Results](https://redwallanalytics.com/2020/04/14/evaluating-mass-muni-cafr-tabulizer-results-part-3/)
+Part 4 - [Scraping Failed Tabulizer PDFs with AWS Textract](https://redwallanalytics.com/2020/04/14/scraping-failed-tabulizer-pdfs-with-aws-textract-part-4/)
+Part 5 - [Evaluating Mass Muni CAFR Textract Results]()
+
 
 
 # Massachusetts Municipal Vulnerability
