--- a/content/post/2020-04-15-scraping-failed-tabulizer-pdfs-with-aws-textract.Rmd
+++ b/content/post/2020-04-15-scraping-failed-tabulizer-pdfs-with-aws-textract.Rmd
@@ -221,4 +221,4 @@ s3$delete_bucket(Bucket = bucket_name)
 
 # Conclusion
 
-That concludes this section of setting up S3 and calling Textract which seems like a complete segment. In addition to Textract, the paws link to the AWS SDK opens up so many other options, including the obvious links EC2 and ECS, but also Rekognition for images, Polly for speech to text, Translate for languages and Lambda among others. It seemed like a good place to stop to keep the series in digestible increments.
+That concludes this section of setting up S3 and calling Textract which seems like a complete segment. In addition to Textract, the paws link to the AWS SDK opens up so many other options, including the obvious links EC2 and ECS, but also Rekognition for images, Polly for speech to text, Translate for languages and Lambda among others. It seemed like a good place to stop to keep the series in digestible increments. In the next post [Evaluating Mass Muni CAFR Textract Results - Part 5](https://redwallanalytics.com/2020/04/24/evaluating-mass-muni-cafr-textract-results-part-5/), we will show how to parse the complicated json response object back into a table, extract the desired elements for the cases where we failed to match and evaluate how well Textract did on those difficult cases.
