--- a/content/post/2020-04-24-evaluating-mass-muni-cafr-textract-results-part-5.Rmd
+++ b/content/post/2020-04-24-evaluating-mass-muni-cafr-textract-results-part-5.Rmd
@@ -40,7 +40,7 @@ knitr::opts_chunk$set(comment=NA, fig.width=12, fig.height=8, out.width = '100%'
 
 In [Scraping Failed Tabulizer PDFs with AWS Textract - Part 4](https://redwallanalytics.com/2020/04/14/scraping-failed-tabulizer-pdfs-with-aws-textract-part-4/), we showed how to use pdftools and tabulizer to subset a group of PDFs, the AWS paws SDK package to store the PDF in S3, and Textract machine learning to extract a block response object using its "asynchronous" process. Subsequently, we discovered an alternate route to save the desired pages as PNG and send those page-by-page to AWS to get the same result. This method has the added advantage of being free to free-tier AWS users. 
 
-In this post, we will show how to do this, and also how to parse the complicated response blocks (shown in Figure \@ref(tab:list-view)), which took us a few days to figure out. As mentioned previously, the response blocks are complicated, with one nested list pertaining to text and another to the coordinates on the page. We attempted to write R-code to extract the required data, but in the end, decided to modify the AWS code, and call it within RStudio using the reticulate package. This had the added benefit of bringing together several pieces we had been working on.
+In this post, we will show how to do this, and also how to parse the response blocks (shown in Figure \@ref(tab:list-view)), which took us a few days to figure out. As mentioned previously, the response blocks are complicated, with one nested list pertaining to text and another to the coordinates on the page. We attempted to write R-code to extract the required data, but in the end, decided to modify the AWS code, and call it within RStudio using the reticulate package. This had the added benefit of bringing together several pieces we had been working on.
 
 
 ```{r 'textract-config', message=FALSE, warning=FALSE, include=FALSE}
@@ -91,7 +91,7 @@ pdf_convert(
 
 # Extract Page with AWS Textract Synchronous Operation
 
-We input our AWS credentials and set up a Textract response object in the same way as in the previous post. One difference between synchronous and asynchronous (demonstrated in the last post), is that paws sends the request and gets the response with just the "analyze_document" function call, instead of "start_document_analysis" and the second "get_document_analysis". We also did not need to loop, because each page fit within the maximum of 1000 blocks, and was immediately returned without a second function call.
+We input our AWS credentials and set up a Textract response object in the same way as in the previous post. One difference between synchronous and asynchronous (demonstrated in the last post), is that paws sends the request and gets the response with just the "analyze_document" function call, instead of "start_document_analysis" and the second "get_document_analysis". We also did not need to loop, because each page fit within the maximum of 1000 blocks, and was immediately returned without a second function call. We also used the Bytes argument to reference the PNG from our local environment instead of pointing Textract to an S3 bucket.
 
 
 ```{r 'textract-extract', echo=TRUE, message=FALSE, warning=FALSE}
@@ -112,7 +112,7 @@ response <-
 
 # Description and List View of Textract Response Object
 
-In the chunk below, we show the anatomy of the response object. The first 10 tabs in the listviewer below have the PAGE and some LINE elements, which are the parents of WORDS and CELLS. The TABLE block is shown in element 421, with its 168 children. WORDS and CELL blocks are shown in lines 161-170 and 422-430, respectively. CELL and WORD blocks hvae no children, but can be used to find the location or row-column coordinates of a WORD. We spent a lot of time trying to understand the relationships between the different kinds of objects in order to parse it out in R, but in the end, it seemed easier just to use AWS's pre-built Python parser.
+In the chunk below, we show the anatomy of the response object. The first 10 tabs in the listviewer below have the PAGE (element 0) and some LINE elements (1-10), which are the parents of WORDS and CELLS. The TABLE block is shown in element 21, with its 168 children. WORDS and CELL blocks are shown in lines 11-20 and 22-30, respectively. CELL and WORD blocks hvae no children, but can be used to find the location or row-column coordinates of a WORD. We spent a lot of time trying to understand the relationships between the different kinds of objects in order to parse it out in R, but in the end, it seemed easier just to use AWS's pre-built Python parser.
 
 
 ```{r 'list-view', echo=TRUE, message=FALSE, warning=FALSE}
@@ -142,7 +142,7 @@ reticulate::use_condaenv(
 ```
 
 
-AWS gives the Python code to parse the blocks back into a tabular form [Textract Python Table Parser] (https://github.com/awsdocs/aws-doc-sdk-examples/blob/master/python/example_code/textract/textract_python_table_parser.py). This code built in the call to AWS with the Python boto client, but we didn't need this so we had to modify to take already returned response instead. A second problem that we encountered was that when the object was parsed over from R into Python, blocks which had multiple children "Ids" were converted to list, while those with single children remained as strings. It took some time, we patched this in the "get_text" function below, so assume it should work for any R user now. 
+AWS gives the Python code to parse the blocks back into a tabular form [Textract Python Table Parser] (https://github.com/awsdocs/aws-doc-sdk-examples/blob/master/python/example_code/textract/textract_python_table_parser.py). This code built in the call to AWS with the Python boto client, but we didn't need this so we had to modify to take already returned response instead. A second problem that we encountered was that when the object was parsed over from R into Python, blocks which had multiple children "Ids" were converted to list, while those with single children remained as strings. It took some time, we patched this in the "get_text" function below, so assume it should work for any R user now. We noted where we made modifications with comments below. 
 
 
 ```{python 'textract-python-table-parser', echo=TRUE}
@@ -226,8 +226,10 @@ We called our Python "get_table_csv_results" function from reticulate (as py$get
 
 ```{r 'extract-tables', echo=TRUE, message=FALSE, warning=FALSE}
 
+# Call Python function above from R
 page <- py$get_table_csv_results(response)
 
+# Print text
 cat(page)
     
 ```
@@ -235,7 +237,8 @@ cat(page)
 
 # Comparing the Textract Results
 
-We started with 29 municipalities where there were problems matching the manually extracted data. We discovered that two of those had used scanned PDFs (ie: the auditor put the document on a scanner before converting to PDF), so pdftools couldn't recognize the data, and we couldn't get page numbers to send to Textract. Of those sent to Textract, most tables were not able to be parsed. Thus, of the 5% of cases which didn't work with Tabulizer, we successfully extracted 83/125 (almost 70%) with Textract for about $2. We also didn't spend to much time fine tuning our regex and cleaning of the raw Textract output, so if this were going to be a repeated process, it could likely be further improved.
+We started with 29 municipalities where there were problems matching the manually extracted data. We discovered that two of those had used scanned PDFs (ie: the auditor put the document on a scanner before converting to PDF), so pdftools couldn't recognize the data. Without pdftools, we couldn't even find the page numbers to send to Textract. Of those requested from Textract (125), all but a 4 tables were returned without problems. Recall that we were able to accurately extract all but about 5% of the cases we wanted. Of the remaining 125, we successfully extracted 83 (almost 70%) with Textract for about $2. We didn't spend much time fine tuning our regex and cleaning of the raw Textract output, so if this were going to be a repeated process, it could likely be further improved.
+
 
 ```{r 'textract-compare', echo=TRUE, message=FALSE, warning=FALSE}
 textract_compare <- 
@@ -249,15 +252,30 @@ sum(as.matrix(textract_compare[,.SD, .SDcols=patterns("diff")])==0)/125
 DT::datatable(textract_compare[, .SD, .SDcols=patterns("diff|muni")])
 ```
 
-# Conclusions
+# Summary
 
 As reminder of the tools demonstrated in this series, 
 
-1/ How to find the location of a table on a page with regex matching and pdftools [Tabulizer and pdftools Together as Super-powers](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/)
+1/ Find the location of a table on a page with regex matching and pdftools [Tabulizer and pdftools Together as Super-powers](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/)
 
-2/ How to extract a particular page from a pdf with pdftools [Tabulizer and pdftools Together as Super-powers](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/)
+2/ Extract a particular page from a pdf with pdftools [Tabulizer and pdftools Together as Super-powers](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/)
 
-3/ How to aggregate multiple PDF pages together [Tabulizer and pdftools Together as Super-powers](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/)
+3/ Aggregate multiple PDF pages together [Tabulizer and pdftools Together as Super-powers](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/)
 
-4/ 
+4/ Use pdttools to find exact table parameters and accurately extract a large amount of slightly varying tables combining pdftools and tabulizer [Tabulizer and pdftools Together as Super-powers](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/)
+
+5/ Connect and interact with AWS S3 with the paws SDK [Scraping Failed Tabulizer PDFs with AWS Textract](https://redwallanalytics.com/2020/04/14/scraping-failed-tabulizer-pdfs-with-aws-textract-part-4/)
+
+6/ Send requests to AWS Textract from S3 and use bulk asynchronous operation with the paws SDK [Scraping Failed Tabulizer PDFs with AWS Textract](https://redwallanalytics.com/2020/04/14/scraping-failed-tabulizer-pdfs-with-aws-textract-part-4/)
+
+7/ Convert a PDF page to PNG and send and receive single page requests to AWS Textract. [This post]
+
+8/ Study the anatomy of the AWS JSON response object and use the Python parser from R with reticulate to convert it back into a tabular form. [This post]
+
+
+# Conclusion
+
+In the final analysis 
+
+
 
