--- a/content/post/2020-03-31-parsing-mass-municipal-pdf-cafrs-with-tabulizer-pdftools-and-aws-textract-part-1.Rmd
+++ b/content/post/2020-03-31-parsing-mass-municipal-pdf-cafrs-with-tabulizer-pdftools-and-aws-textract-part-1.Rmd
@@ -5,42 +5,53 @@ author: David Lucey
 date: '2020-03-31'
 slug: parsing-mass-municipal-pdf-cafrs-with-tabulizer-pdftools-and-aws-textract-part-1
 categories: ["R", "Code-Oriented"]
-tags: ["pdf", "pdftools", "tabulizer", "XBRL"]
+tags: ["pdf", "pdftools", "tabulizer", "XBRL", "textract"]
 output:
   html_document:
     code_folding: true
 ---
 
 ```{r 'set-up', include=FALSE}
+
 # Libraries
-library(data.table)
-library(stringr)
-library(rlist)
-library(DT)
-#library(janitor)
-#library(xlsx)
-#library(readxl)
+packages <- 
+  c("data.table",
+    "rlist",
+    "stringr",
+    "DT",
+    "janitor",
+    "readxl",
+    "xlsx"
+    )
+
+if (length(setdiff(packages,rownames(installed.packages()))) > 0) {
+  install.packages(setdiff(packages, rownames(installed.packages())))  
+}
+
+invisible(lapply(packages, library, character.only = TRUE))
+
+knitr::opts_chunk$set(comment=NA, fig.width=12, fig.height=8, out.width = '100%')
 
 ```
 
 
 # Introduction
 
-Redwall Analytics had the pleasure of collaborating with Marc Joffe, of Reason Foundation, in its October 2018 post [Replicating Yankee Institute Risk Score Over 15 Years](https://redwallanalytics.com/2019/10/12/replicating-yankee-institute-risk-score-over-15-years/) for 150 Connecticut towns. This involved taking a well organized public dataset from the State's website, and analyzing and building an application to view the risk score over time in R. When Marc called to ask if we could report on our blog site about similar analysis for 150 Massachusetts towns, as in Connecticut's [Warning Signs](https://yankeeinstitute.org/wp-content/uploads/2018/08/Warning-Signs-min-1.pdf), we jumped at the idea. Naturally, Redwall wanted to replicate the analysis over a longer time period, but this turned out to be more challenging in Massachusetts. 
+Redwall Analytics had the pleasure of collaborating with Marc Joffe, of Reason Foundation, in its October 2018 post [Replicating Yankee Institute Risk Score Over 15 Years](https://redwallanalytics.com/2019/10/12/replicating-yankee-institute-risk-score-over-15-years/) for 150 Connecticut towns. This involved taking a well organized public dataset from the State's website, and analyzing and building an application to view the risk score over time in R. When Marc called to ask if we could report on our blog site about similar analysis for 149 Massachusetts towns, as in Connecticut's [Warning Signs](https://yankeeinstitute.org/wp-content/uploads/2018/08/Warning-Signs-min-1.pdf), we jumped at the idea. Naturally, Redwall wanted to replicate the analysis over a longer time period, but this turned out to be more challenging in Massachusetts. 
 
-As Redwall discussed in [A Walk Though of Accessing Financial Statements with XBRL in R - Part 1](https://redwallanalytics.com/2020/02/18/a-walk-though-of-accessing-financial-statements-with-xbrl-in-r-part-1/), the SEC has required registered companies to report in XBRL since 2008. Unfortunately, this is not the case for the tens of thousands of municipal borrowers around the US. Connecticut is one of approximately 20 states with municipal monitoring, so the Office of Policy and Management systematically gathers key financial statement data each year in open public databases. Unfortunately, Massachusetts does not have formal municipal monitoring and does not make similar databases available. 
+As Redwall discussed in [A Walk Though of Accessing Financial Statements with XBRL in R - Part 1](https://redwallanalytics.com/2020/02/18/a-walk-though-of-accessing-financial-statements-with-xbrl-in-r-part-1/), the SEC has required registered companies to report in XBRL since 2008. Unfortunately, this is not the case for the tens of thousands of municipal borrowers around the US. Connecticut is one of approximately 20 states with a forman municipal monitoring program, so the Office of Policy and Management systematically gathers key financial statement data each year in an annual report and open public databases. Unfortunately, Massachusetts does not have formal monitoring and does not make similar databases available. 
 
-While Massachusetts does maintain the slick-looking [Municipal Trends Dashboard](https://www.mass.gov/service-details/municipal-finance-trend-dashboard), with some key information going back in some cases 20 years, it doesn't offer the opportunity to download the complete data, and for some reason, excludes a lot of key elements. For example, it includes "Unassigned General Fund Balance", but not "Assigned General Fund Balance", so it is impossible to know the complete picture of the Fund Balance of a municipality. There are similar difficulties finding the Unrestricted Net Position, which is essential to the Yankee Institute's analysis. In Connecticut, we have felt a little left behind by Massachusetts' successful biotech and high-technology industries, and resulting booming real estate markets, so it was a surprise to see how far ahead we are in this regard.
+While Massachusetts does maintain the slick-looking [Municipal Trends Dashboard](https://www.mass.gov/service-details/municipal-finance-trend-dashboard), with some key information going back in some cases 20 years, it doesn't offer the opportunity to download the complete data, and for some reason, excludes a lot of key elements. For example, it includes "Unassigned General Fund Balance", but not "Assigned General Fund Balance", so it is impossible to know the complete picture of the Fund Balance of a municipality. There are similar difficulties finding the "Unrestricted Net Position", which is essential to the Yankee Institute's analysis. In Connecticut, we have felt a little left behind by Massachusetts' successful biotech and high-technology industries, and resulting booming real estate markets, so it was a surprise to see how far ahead we are in this regard.
 
 # Project Outlines
 
-As we worked to replicate Marc's analysis, the outlines of an interesting project, which might be helpful to others needing to extract data from PDFs, became apparent. Redwall will gather some of the information from the Municipal Trends Dashboard, but then try to extract the missing elements from PDFs containing the cities’ audited financial statements (known as CAFRs), using OCR tools available in R. We will then attempt to use the commercial AWS Textract service for the remaining tough cases using the R paws library. For the purposes of this exercise, Marc's spreadsheets will represents a kind of "labelled data" for comparison purposes with fields from the extracted PDFs.
+As we worked to replicate Marc's analysis, the outlines of an interesting project, which might be helpful to others needing to extract data from PDFs, became apparent. Redwall will gather some of the information from the Municipal Trends Dashboard, but then try to extract the missing elements from PDFs containing the cities’ audited financial statements (known as CAFRs), using OCR tools available in R. We will then attempt to use the commercial AWS Textract service for the remaining tough cases using the R `paws` library. For the purposes of this exercise, Marc's spreadsheets will represents a kind of "labelled data" for comparison purposes with fields from the extracted PDFs.
 
-The relevant 150 PDFs for 2018 were downloaded from a library maintained by the [Center for Municipal Finance](http://www.municipalfinance.org), and Redwall set out on heavy-duty PDF parsing to be described in multiple upcoming posts. In this post, we will show the data required in Table \@ref(fig:mass-inputs) and results in Table \@ref(fig:risk-score-summary) of Marc's analysis, and explore which data fields will be needed to automate the process. (Please note: the data and methodology shown below are Marc's, displayed here for information purposes. Redwall Analytics does not vouch for the accuracy of the data or methodology, nor make any investment recommendations based on it.)
+The relevant 149 PDFs for 2018 were downloaded from a library maintained by the [Center for Municipal Finance](http://www.municipalfinance.org), and Redwall set out on heavy-duty PDF parsing to be described in multiple upcoming posts. In this post, we will show the data required in Table \@ref(fig:mass-inputs) and results in Table \@ref(fig:risk-score-summary) of Marc's analysis, and explore which data fields will be needed to automate the process. (Please note: the data and methodology shown below are Marc's, displayed here for information purposes. Redwall Analytics does not vouch for the accuracy of the data or methodology, nor make any investment recommendations based on it.)
 
-After that, we will move on to attempting to extract that data from the PDFs. The first steps of the process to parse these PDFs using two incredible rstat wrappers [pdftools](https://docs.ropensci.org/pdftools/) and [Tabulizer](https://docs.ropensci.org/tabulizer/). We will also use [Amazon's Textract](https://aws.amazon.com/textract/) using the R PAWS package SDK. While these libraries have been around for a couple of years, we did not find anyone who had put all of these pieces together through the paces like we are about to. 
+After that, we will move on to attempting to extract that data from the PDFs. The first steps of the process to parse these PDFs using two incredible rstat wrappers [pdftools](https://docs.ropensci.org/pdftools/) and [tabulizer](https://docs.ropensci.org/tabulizer/). We will also use [Amazon's Textract](https://aws.amazon.com/textract/) using the R `paws` SDK library. While these libraries have been around for a couple of years, we did not find anyone who had put all of these pieces together through the paces like we are about to. 
 
-Because these tools are relatively new, we struggled to find much written on the nuance of using them to their full individual potentials. We also believe that we have found a few interesting solutions through their combination, making them even more powerful than individually.
+Because these tools are relatively new, we struggled to find much written on using them to their full individual potentials. We also believe that we have found some interesting methods, making them more powerful by using them in combination. One of the main goals of this series is to begin to repay the debt to all those who shared their wisdom and enabled us to reach the level where we can give back to the community.
 
 
 ```{r 'load-reason', include=FALSE}
@@ -61,7 +72,7 @@ Part 1 - Parsing Mass Municipal PDF CAFRs with Tabulizer, pdftools and AWS Textr
 Part 2 - [Tabulizer and pdftools Together as Super-powers](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/)
 Part 3 - [Evaluating Mass Muni CAFR Tabulizer Results](https://redwallanalytics.com/2020/04/14/evaluating-mass-muni-cafr-tabulizer-results-part-3/)
 Part 4 - [Scraping Failed Tabulizer PDFs with AWS Textract](https://redwallanalytics.com/2020/04/14/scraping-failed-tabulizer-pdfs-with-aws-textract-part-4/)
-Part 5 - [Evaluating Mass Muni CAFR Textract Results]()
+Part 5 - [Evaluating Mass Muni CAFR Textract Results](https://redwallanalytics.com/2020/04/24/evaluating-mass-muni-cafr-textract-results-part-5/)
 
 
 
@@ -144,12 +155,14 @@ datatable(reason[keeps], extensions = c('FixedColumns'),
 
 # Conclusion
 
-That completes the first in this series of posts. In the next post [Tabulizer and pdftools Together as Super-powers - Part 2](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/), we will evaluate the results of our Tabulizer extraction and show how to send failed tables to AWS Textract where needed with the R paws SDK.
+That completes the first in this series of posts. In the next post [Tabulizer and pdftools Together as Super-powers - Part 2](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/), we will show how to the combination of pdftools and tabulizer can enable more accurate table extraction for a large number of slightly varying tables.
 
 
 ```{r 'load-mass-file', eval=FALSE, include=FALSE}
 
-r <- readRDS("/Users/davidlucey/Desktop/David/Projects/mass_munis/mass_files.RDS")
-names <- str_remove(unique(unlist(purrr::flatten(lapply(r, names)))), "users_davidlucey_desktop_david_projects_mass_munis_data_")
+r <- 
+  readRDS("/Users/davidlucey/Desktop/David/Projects/mass_munis/mass_files.RDS")
+names <- 
+  str_remove(unique(unlist(purrr::flatten(lapply(r, names)))), "users_davidlucey_desktop_david_projects_mass_munis_data_")
 names[str_detect(names, "outflows")]
 ```
