--- a/content/post/2020-04-15-scraping-failed-tabulizer-pdfs-with-aws-textract.Rmd
+++ b/content/post/2020-04-15-scraping-failed-tabulizer-pdfs-with-aws-textract.Rmd
@@ -7,7 +7,7 @@ categories: ["R", "Code-Oriented"]
 tags: ["pdf", "pdftools", "tabulizer", "textract"]
 output:
   html_document:
-    code_folding: yes
+    code_folding: 'hide'
 ---
 
 
@@ -40,7 +40,7 @@ knitr::opts_chunk$set(comment=NA, fig.width=12, fig.height=8, out.width = '100%'
 
 # Introduction
 
-In [Evaluating Mass Muni CAFR Tabulizer Results - Part 3](https://redwallanalytics.com/2020/04/14/evaluating-mass-muni-cafr-tabulizer-results-part-3/), we discovered that we were able to accurately extract ~95% of targeted data using tabulizer, but that might not have been good enough for some applications. In this post, we will show how to subset specific pages of PDFs using pdftools pdf_subset function, merge those pages with those of other municipalities with tabulizer merge_pdf, and then upload the aggregated document to an AWS S3 bucket with the R paws interface with the AWS SDK. Once in an S3 bucket, we will show how to use paws to call [AWS Textract](https://aws.amazon.com/textract/), which uses OCR and machine learning to try to accurately parse text and tables.
+In [Evaluating Mass Muni CAFR Tabulizer Results - Part 3](https://redwallanalytics.com/2020/04/14/evaluating-mass-muni-cafr-tabulizer-results-part-3/), we discovered that we were able to accurately extract ~95% of targeted data using tabulizer, but that might not have been good enough for some applications. In this post, we will show how to subset specific pages of PDFs using `pdftools` `pdf_subset()` function, merge those pages with those of other municipalities with tabulizer merge_pdf, and then upload the aggregated document to an AWS S3 bucket with the R paws interface with the AWS SDK. Once in an S3 bucket, we will show how to use paws to call [AWS Textract](https://aws.amazon.com/textract/), which uses OCR and machine learning to try to accurately parse text and tables.
 
 
 # AWS Textract Using PAWS Package
@@ -90,17 +90,10 @@ hudson <-
 
 # Setting up an S3 Bucket and Uploading a PDF
 
-We then input our AWS credentials and establish an S3 response object ("s3" below), which we use to instruct AWS to create a S3 bucket, and then upload our subset file of PDFs to S3. When setting the bucket names, it is important not to include punctuation, because these will be rejected. Another mistake we made was uploading the PDF from outside our current working directory, because S3 created the directory structure to match our disc, and Textract seemed to be unable to navigate the file structure to find the document. We showed "munisubset" bucket at the bottom of the code below.
+We then input our AWS credentials and establish an S3 response object (`s3` below), which we use to instruct AWS to create a S3 bucket, and then upload our subset file of PDFs to S3. When setting the bucket names, it is important not to include punctuation, because these will be rejected. Another mistake we made was uploading the PDF from outside our current working directory, because S3 created the directory structure to match our disc, and Textract seemed to be unable to navigate the file structure to find the document. We showed "munisubset" bucket at the bottom of the code below.
 
 
 ```{r 's3-bucket', echo=TRUE, message=FALSE, warning=FALSE}
-
-#setwd(path)
-
-# Set AWS system credentials 
-#Sys.setenv(AWS_ACCESS_KEY_ID = "")
-#Sys.setenv(AWS_SECRET_ACCESS_KEY = "")
-#Sys.setenv(AWS_REGION = "us-east-1")
 
 # Save file to S3 Bucket
 s3 <- 
@@ -141,7 +134,7 @@ buckets$Buckets[[1]]
 
 # Setting up Textract Object and Calling Start Document Analysis
 
-Next, we set up a Textract response object ("svc" below) and use "start_document_analysis" to process the pages in the code below. Note that we select "TABLES", but other parameters are "FORMS" or "FORMS | TABLES". It is possible to get help by using ?textract or ?start_document_analysis just like any other function in R. The docs say that "start_document_analysis" uses asynchronous analysis to look for relationships between key-value pairs. Running Textract on our 700 pages took more than an hour, so another step would be to figure out how to be notified of the completion with AWS SNS. Once completed, Textract returns the "JobID" (shown below) which is required to get the analysis in the next step.
+Next, we set up a Textract response object (`svc` below) and use `start_document_analysis()` to process the pages in the code below. Note that we select `TABLES`, but other parameters are `FORMS` or `FORMS | TABLES`. It is possible to get help by using ?textract or ?start_document_analysis just like any other function in R. The docs say that `start_document_analysis()` uses asynchronous analysis to look for relationships between key-value pairs. Running Textract on our 700 pages took more than an hour, so another step would be to figure out how to be notified of the completion with AWS SNS. Once completed, Textract returns the `JobID` (shown below) which is required to get the analysis in the next step.
 
 
 ```{r 'textract-analysis', echo=TRUE, message=FALSE, warning=FALSE}
@@ -191,7 +184,7 @@ Sys.sleep(120)
 
 # Recalling the Blocks from Textract
 
-Below, we show our call to paws "get_document_analysis" using the JobId we received back from Textract above. A few things to mention, Textract stores pages from all of the documents together in "Blocks" when called in bulk from a PDF. We searched around, but it doesn't seem possible to download the whole job with all of the pages at one time. The only way we could figure out to get the data back into our environment was to while loop over get_document_analysis in the maximum 1,000 increments. This also took time, and our 700 pages of tables came back as over 400,000 blocks commingled together in a json object. To give an idea of the sizes involved, the full aggregated PDF resulted to a 210 MB json, once we had called for all the Blocks. 
+Below, we show our call to paws `get_document_analysis()` using the JobId we received back from Textract above. A few things to mention, Textract stores pages from all of the documents together in "Blocks" when called in bulk from a PDF. We searched around, but it doesn't seem possible to download the whole job with all of the pages at one time. The only way we could figure out to get the data back into our environment was to while loop over get_document_analysis in the maximum 1,000 increments. This also took time, and our 700 pages of tables came back as over 400,000 blocks commingled together in a json object. To give an idea of the sizes involved, the full aggregated PDF resulted to a 210 MB json, once we had called for all the Blocks. 
 
 In the next step, we have our work cut out to extract the key elements from the json. A json is a common object for API calls, but when introduced to a json a few years ago, it seemed to be a hopelessly, impenetrable data structure, and one to be avoided if at all possible. Fortunately, time has moved on, and like many things, it might be possible now. In the next post, we will attempt to reconstitute the Blocks into their original pages, and then parse out the desired elements for comparison. A lot is at stake since we have invested quite a bit of time to get to this point.
 
