--- a/content/post/2020-04-24-evaluating-mass-muni-cafr-textract-results-part-5.Rmd
+++ b/content/post/2020-04-24-evaluating-mass-muni-cafr-textract-results-part-5.Rmd
@@ -7,7 +7,7 @@ categories: ["R", "Code-Oriented"]
 tags: ["pdf", "pdftools", "tabulizer", "textract"]
 output:
   html_document:
-    code_folding: yes
+    code_folding: 'hide'
 ---
 
 
@@ -21,7 +21,8 @@ packages <-
     "paws.common",
     "keyring",
     "pdftools",
-    "listviewer"
+    "listviewer",
+    "readxl"
     )
 
 if (length(setdiff(packages,rownames(installed.packages()))) > 0) {
@@ -38,9 +39,9 @@ knitr::opts_chunk$set(comment=NA, fig.width=12, fig.height=8, out.width = '100%'
 
 # Introduction
 
-In [Scraping Failed Tabulizer PDFs with AWS Textract - Part 4](https://redwallanalytics.com/2020/04/14/scraping-failed-tabulizer-pdfs-with-aws-textract-part-4/), we showed how to use pdftools and tabulizer to subset a group of PDFs, the AWS paws SDK package to store the PDF in S3, and Textract machine learning to extract a block response object using its "asynchronous" process. Subsequently, we discovered an alternate route to save the desired pages as PNG and send those page-by-page to AWS to get the same result. This method has the added advantage of being free to free-tier AWS users. 
+In [Scraping Failed Tabulizer PDFs with AWS Textract - Part 4](https://redwallanalytics.com/2020/04/14/scraping-failed-tabulizer-pdfs-with-aws-textract-part-4/), we showed how to use `pdftools` and `tabulizer` to subset a group of PDFs, the AWS `paws` SDK package to store the PDF in S3, and Textract machine learning to extract a block response object using its "asynchronous" process. Subsequently, we discovered an alternate route to save the desired pages as PNG and send those page-by-page to AWS to get the same result. This method has the added advantage of being free to free-tier AWS users. 
 
-In this post, we will show how to do this, and also how to parse the response blocks (shown in Figure \@ref(tab:list-view)), which took us a few days to figure out. As mentioned previously, the response blocks are complicated, with one nested list pertaining to text and another to the coordinates on the page. We attempted to write R-code to extract the required data, but in the end, decided to modify the AWS code, and call it within RStudio using the reticulate package. This had the added benefit of bringing together several pieces we had been working on.
+In this post, we will show how to do this, and also how to parse the response blocks (shown in Figure \@ref(tab:list-view)), which took us a few days to figure out. As mentioned previously, the response blocks are complicated, with one nested list pertaining to text and another to the coordinates on the page. We attempted to write R-code to extract the required data, but in the end, decided to modify the AWS code, and call it within RStudio using the `reticulate` package. This had the added benefit of bringing together several pieces we had been working on.
 
 
 ```{r 'textract-config', message=FALSE, warning=FALSE, include=FALSE}
@@ -61,10 +62,10 @@ svc <-
 ```
 
 
-# Convert Selected Page to PNG with pdftools
+# Convert Selected Page to PNG with `pdftools`
 
 
-Below we show the steps extract the Balance Sheet (page 27) from the Attleboro CAFR as a png with pdftools "pdf_convert" function. At first, we used the default setting for dpi of 75, but we found that the resolution this was too fuzzy, and led to frequent errors on particular letters with the OCR. These were not eliminated, but significantly reduced once we switched to dpi of 200, but it seems like it might be beneficial to go even higher, because for example, the "l" was commonly dropped when it occurred at the end of a word (ie: "Governmenta").
+Below we show the steps extract the Balance Sheet (page 27) from the Attleboro CAFR as a png with the `pdftools` `pdf_convert()` function. At first, we used the default setting for dpi of 75, but we found that the resolution this was too fuzzy, and led to frequent errors on particular letters with the OCR. These were not eliminated, but significantly reduced once we switched to dpi of 200, but it seems like it might be beneficial to go even higher, because for example, the "l" was commonly dropped when it occurred at the end of a word (ie: "Governmenta").
 
 
 ```{r 'extract-png', message=FALSE, warning=FALSE}
@@ -91,7 +92,7 @@ pdf_convert(
 
 # Extract Page with AWS Textract Synchronous Operation
 
-We input our AWS credentials and set up a Textract response object in the same way as in the previous post. One difference between synchronous and asynchronous (demonstrated in the last post), is that paws sends the request and gets the response with just the "analyze_document" function call, instead of "start_document_analysis" and the second "get_document_analysis". We also did not need to loop, because each page fit within the maximum of 1000 blocks, and was immediately returned without a second function call. We also used the Bytes argument to reference the PNG from our local environment instead of pointing Textract to an S3 bucket.
+We input our AWS credentials and set up a Textract response object in the same way as in the previous post. One difference between synchronous and asynchronous (demonstrated in the last post), is that `paws` sends the request and gets the response with just the `analyze_document()` function, instead of `start_document_analysis()` and the second `get_document_analysis`. We also did not need to loop, because each page fit within the maximum of 1000 blocks, and was immediately returned without a second function call. We also used the Bytes argument to reference the PNG from our local environment instead of pointing Textract to an S3 bucket.
 
 
 ```{r 'textract-extract', echo=TRUE, message=FALSE, warning=FALSE}
@@ -112,7 +113,7 @@ response <-
 
 # Description and List View of Textract Response Object
 
-In the chunk below, we show the anatomy of the response object. The first 10 tabs in the listviewer below have the PAGE (element 0) and some LINE elements (1-10), which are the parents of WORDS and CELLS. The TABLE block is shown in element 21, with its 168 children. WORDS and CELL blocks are shown in lines 11-20 and 22-30, respectively. CELL and WORD blocks hvae no children, but can be used to find the location or row-column coordinates of a WORD. We spent a lot of time trying to understand the relationships between the different kinds of objects in order to parse it out in R, but in the end, it seemed easier just to use AWS's pre-built Python parser.
+In the chunk below, we show the anatomy of the response object. The first 10 tabs in the listviewer below have the `PAGE` (element 0) and some `LINE` elements (1-10), which are the parents of `WORD` and `CELL`. The `TABLE` block is shown in element 21, with its 168 children. `WORD` and `CELL` blocks are shown in lines 11-20 and 22-30, respectively. `CELL` and `WORD` blocks hvae no children, but can be used to find the location or row-column coordinates of a `WORD`. We spent a lot of time trying to understand the relationships between the different kinds of objects in order to parse it out in R, but in the end, it seemed easier just to use AWS's pre-built Python parser via `reticulate`.
 
 
 ```{r 'list-view', echo=TRUE, message=FALSE, warning=FALSE}
@@ -127,7 +128,7 @@ listviewer::jsonedit(
 
 # Parsing the Response Object with Reticulated Python
 
-An increasing amount is being written on how to use reticulate, so we won't get into great detail here about how to set it up. We used Python 3.7 with miniconda after re-installing Anaconda post the recent upgrade to Catalina, in which Apple re-arranged our whole set-up. 
+An increasing amount is being written on how to use `reticulate`, so we won't get into great detail here about how to set it up here. It took us a long time to understand how to set up our environment, but as this case shows, it is probably going to be worth it to switch back and forth to take advantage of the strengths of the two languages. We used Python 3.7 with miniconda after re-installing Anaconda post the recent upgrade to Catalina, in which Apple re-arranged our whole set-up. 
 
 
 ```{r 'reticulate', echo=TRUE, message=FALSE, warning=FALSE}
@@ -142,7 +143,9 @@ reticulate::use_condaenv(
 ```
 
 
-AWS gives the Python code to parse the blocks back into a tabular form [Textract Python Table Parser] (https://github.com/awsdocs/aws-doc-sdk-examples/blob/master/python/example_code/textract/textract_python_table_parser.py). This code built in the call to AWS with the Python boto client, but we didn't need this so we had to modify to take already returned response instead. A second problem that we encountered was that when the object was parsed over from R into Python, blocks which had multiple children "Ids" were converted to list, while those with single children remained as strings. It took some time, we patched this in the "get_text" function below, so assume it should work for any R user now. We noted where we made modifications with comments below. 
+AWS gives the Python code to parse the blocks back into a tabular form [Textract Python Table Parser] (https://github.com/awsdocs/aws-doc-sdk-examples/blob/master/python/example_code/textract/textract_python_table_parser.py). This code built in the call to AWS with the Python boto client from the command line, but we didn't need these functions, so we had to modify to take already returned response straight from our RStudio environment. 
+
+A second problem that we encountered was that when the response object was read into Python from R, blocks which had multiple children `Ids` were converted to list, while those with single children were stored as strings. It took some time, we patched this in the `get_text` function below by converting the strings to single item lists, so it should work for any R user now. We noted where we made modifications with comments below. 
 
 
 ```{python 'textract-python-table-parser', echo=TRUE}
@@ -217,11 +220,12 @@ def generate_table_csv(table_result, blocks_map, table_index):
     csv += '\n\n\n'
     return csv
 
+# Removed main()
 
 ```
 
 
-We called our Python "get_table_csv_results" function from reticulate (as py$get_table_csv_results()) and show the raw parsed unparsed text below. We will not show the clean up here, but please refer to our Github repo for the code which we used.
+We called our Python `get_table_csv_results()` function from `reticulate` (as `py$get_table_csv_results()`) and show the raw parsed unparsed text below. We will not show the clean up of the raw text string here, but this also involves still some complicated regulaar expressions. Please refer to our Github repo for the code we used.
 
 
 ```{r 'extract-tables', echo=TRUE, message=FALSE, warning=FALSE}
@@ -237,45 +241,87 @@ cat(page)
 
 # Comparing the Textract Results
 
-We started with 29 municipalities where there were problems matching the manually extracted data. We discovered that two of those had used scanned PDFs (ie: the auditor put the document on a scanner before converting to PDF), so pdftools couldn't recognize the data. Without pdftools, we couldn't even find the page numbers to send to Textract. Of those requested from Textract (125), all but a 4 tables were returned without problems. Recall that we were able to accurately extract all but about 5% of the cases we wanted. Of the remaining 125, we successfully extracted 83 (almost 70%) with Textract for about $2. We didn't spend much time fine tuning our regex and cleaning of the raw Textract output, so if this were going to be a repeated process, it could likely be further improved.
+As a refresher from [Evaluating Mass Muni CAFR Tabulizer Results - Part 3](https://redwallanalytics.com/2020/04/14/evaluating-mass-muni-cafr-tabulizer-results-part-3/), we started with 149 Massachusetts municipalities, and 5 PDFs couldn't be read at all with OCR (because of their formatting). Of the remaining CAFRs, we were able to match all elements of 121 perfectly, and 23 had one or more elements which failed to match. Textract didn't really help with the PDFs which couldn't be read by OCR, although we really didn't try those because our method relied on `pdftools` using OCR to get the page index.  
 
 
-```{r 'textract-compare', echo=TRUE, message=FALSE, warning=FALSE}
-textract_compare <- 
+
+```{r 'textract-compare', echo=FALSE, message=FALSE, warning=FALSE, fig.cap = 'Textract fixed almost half of wrong elements'}
+
+# Compare Textract to manual data
+textract_compare <-
   readxl::read_xls("~/Desktop/David/Projects/pdf_cafr_parse/textract_compare.xls")
 textract_compare <- setDT(textract_compare)
+textract_compare <-
+  textract_compare[, .SD, .SDcols = patterns("muni|diff_")]
+textract_compare <-
+  melt(textract_compare, idcol = muni)
 
-# Percentage correct
-sum(as.matrix(textract_compare[,.SD, .SDcols=patterns("diff")])==0)/125
+# Problem elements from pdftools/tabulizer extraction
+problems <-
+  fread("/Users/davidlucey/Desktop/David/Projects/pdf_cafr_parse/problems.csv")
+fixed <-
+  textract_compare[problems, on = c("muni", "variable")]
+fixed[,
+  final := dplyr::case_when(
+    value == i.value ~ "Same wrong value",
+    is.na(value) ~ "OCR problem",
+    value == 0 ~ "Textract fixed",
+    value != i.value ~ "Different wrong value"
+  )]
 
-# Show bad cases
-DT::datatable(textract_compare[, .SD, .SDcols=patterns("diff|muni")])
+# Values fixed by Textract not found with Tabulizer
+DT::datatable(fixed[,.(muni, variable, final)], colnames = c("Municipality", "Element", "Final"))
+
 ```
 
-# Summary
 
-As reminder of the tools demonstrated in this series, 
+For our Textract trial, we started with the 23 municipalities where there were known problems matching manually extracted data for 43 elements. Of the requested 125 tables from Textract for about \$2, all but a 4 tables were returned without problems. Of the challenging elements, we successfully extracted 21 from 12 municipalities with Textract for about $2. Recall that we were able to accurately extract all but about 6% of the cases we wanted with `pdftools` and `tabulizer`, so combined with Textract, we got about 97% right. We didn't spend much time fine tuning our regex and cleaning of the raw Textract output, so if this were going to be a repeated process, it could likely be further improved.
 
-1/ Find the location of a table on a page with regex matching and pdftools [Tabulizer and pdftools Together as Super-powers](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/)
 
-2/ Extract a particular page from a pdf with pdftools [Tabulizer and pdftools Together as Super-powers](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/)
+# Series summary
 
-3/ Aggregate multiple PDF pages together [Tabulizer and pdftools Together as Super-powers](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/)
+As reminder of the tools demonstrated in this 5-part series, 
 
-4/ Use pdttools to find exact table parameters and accurately extract a large amount of slightly varying tables combining pdftools and tabulizer [Tabulizer and pdftools Together as Super-powers](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/)
+1. Find the location of a table on a page with regex matching and `pdftools` 
+[Tabulizer and pdftools Together as Super-powers](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/)
 
-5/ Connect and interact with AWS S3 with the paws SDK [Scraping Failed Tabulizer PDFs with AWS Textract](https://redwallanalytics.com/2020/04/14/scraping-failed-tabulizer-pdfs-with-aws-textract-part-4/)
+2. Extract a particular page from a pdf with `pdftools` 
+[Tabulizer and pdftools Together as Super-powers](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/)
 
-6/ Send requests to AWS Textract from S3 and use bulk asynchronous operation with the paws SDK [Scraping Failed Tabulizer PDFs with AWS Textract](https://redwallanalytics.com/2020/04/14/scraping-failed-tabulizer-pdfs-with-aws-textract-part-4/)
+3. Aggregate multiple PDF pages together 
+[Tabulizer and pdftools Together as Super-powers](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/)
 
-7/ Convert a PDF page to PNG and send and receive single page requests to AWS Textract. [This post]
+4. Use pdttools to find exact table parameters and accurately extract a large amount of slightly varying tables combining `pdftools` and `tabulizer` 
+[Tabulizer and pdftools Together as Super-powers](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/)
 
-8/ Study the anatomy of the AWS JSON response object and use the Python parser from R with reticulate to convert it back into a tabular form. [This post]
+5. Connect and interact with AWS S3 with the `paws` SDK 
+[Scraping Failed Tabulizer PDFs with AWS Textract](https://redwallanalytics.com/2020/04/14/scraping-failed-tabulizer-pdfs-with-aws-textract-part-4/)
+
+6. Send requests to AWS Textract from S3 and use bulk asynchronous operation with the `paws` SDK 
+[Scraping Failed Tabulizer PDFs with AWS Textract](https://redwallanalytics.com/2020/04/14/scraping-failed-tabulizer-pdfs-with-aws-textract-part-4/)
+
+7. Convert a PDF page to PNG and send and receive single page requests to AWS Textract. 
+[This post]
+
+8. Study the anatomy of the AWS JSON response object and use the Python parser from R with `reticulate` to convert it back into a tabular form. 
+[This post]
+
 
 
 # Conclusion
 
-In the final analysis 
+It has been over 10 years since the the SEC mandated company financial statements be reported in XBRL. Marc Joffe has advocated for the similar requirements for municipal reporting, a subject which becomes all the more critical at a time when many governments are likely to need emergency funding. After our exploration of amost 150 PDFs, we believe that it would be possible for auditors to come close to the efficacy of XBRL with a few mandatory guidelines for PDF formatting. 
+
+Although there were 73 problem elements, there were only a few patterns common in the large majority of cases:  
+
+  * Scanned images of printed documents
+  * Tables which ran over onto a second page without repeating the column headers
+  * Tables which included a second section on the same page with large indentations
+  * Lack of uniformity of header and footer formatting and naming
+  * Lack of uniformity in line-item names (ie: Total Net Position and Net Position)
+  
+We now have a dataset which could be used to greatly improve the machine readability of municipal financial statements with a small number of prescribed formatting guidelines.
+
 
 
 
